Refactor resolveCompatibleVersions and fix issues with overrides and using direct dependencies (#544)